--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,86 @@
+@import url('https//fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap'); 
 
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: 'Playfair Display', serif;
+}
+html{
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+/* body{
+  min-height: 100vh;
+} */
+
+.counter-wrapper{
+  background: url(../images/head.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 10rem 9%;
+  margin-top: 5rem;
+  position: relative;
+}
+.counter-wrapper::before{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  z-index: 1;
+}
+.counter{
+  text-align: center;
+  color: #ddd;
+  z-index: 2;
+  position: relative;
+}
+.counter::before{
+  position: absolute;
+  content: '';
+  bottom: -2rem;
+  left: 50%;
+  width: 20%;
+  height: .2rem;
+  background: #4db7fe;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.counter .count{
+  font-size: 5rem;
+  margin-bottom: 1rem;
+}
+.counter p{
+  font-size: 1.4rem;
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+}
+
+@media (max-width: 991px){
+  html{
+    font-size: 55%;
+  }
+}
+@media (max-width: 768px){
+  .counter-wrapper{
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 8rem;
+  }
+}
+@media (max-width: 450px){
+  html{
+    font-size: 50%;
+  }
+  .counter-wrapper{
+    grid-template-columns: 1fr;
+  }
+}
